--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,3 +11,7 @@ serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 chrono = "0.4"
 reqwest = { version = "0.11", features = ["json"] }
+
+[dependencies.pyo3]
+version = "0.16.5"
+features = ["auto-initialize"]
